// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--base t-button--primary t-size-l t-is-block t-button--shape-rectangle"
    type="button"
  >
    <span
      class="t-button__text"
    >
       强按钮
    </span>
  </button>
  <button
    class="t-button t-button--outline t-button--primary t-size-l t-is-block t-button--shape-rectangle"
    type="button"
  >
    <span
      class="t-button__text"
    >
       弱按钮
    </span>
  </button>
  <button
    class="t-button t-button--outline t-button--default t-size-l t-is-block t-button--shape-rectangle"
    type="button"
  >
    <span
      class="t-button__text"
    >
       次按钮
    </span>
  </button>
  <button
    class="t-button t-button--base t-button--primary t-size-default t-is-block t-button--shape-rectangle"
    type="button"
  >
    <svg
      class="t-icon t-icon-app"
    >
      <use
        xlink:href="#t-icon-app"
      />
    </svg>
    <span
      class="t-button__text"
    >
       带图标按钮
    </span>
  </button>
  <button
    class="t-button t-button--base t-button--danger t-size-l t-is-block t-button--shape-rectangle"
    type="button"
  >
    <span
      class="t-button__text"
    >
       强警告按钮
    </span>
  </button>
  <button
    class="t-button t-button--outline t-button--danger t-size-l t-is-block t-button--shape-rectangle"
    type="button"
  >
    <span
      class="t-button__text"
    >
       弱警告按钮
    </span>
  </button>
</DocumentFragment>
`;

exports[`icon.jsx 1`] = `
<DocumentFragment>
  <div
    class="flex align-center margin-right"
  >
    <button
      class="t-button t-button--base t-button--primary t-size-l t-button--shape-rectangle"
      type="button"
    >
      <svg
        class="t-icon t-icon-app"
      >
        <use
          xlink:href="#t-icon-app"
        />
      </svg>
      <span
        class="t-button__text"
      >
         图标按钮
      </span>
    </button>
    <button
      class="t-button t-button--base t-button--primary t-size-l t-button--shape-round"
      type="button"
    >
      <svg
        class="t-icon t-icon-app"
      >
        <use
          xlink:href="#t-icon-app"
        />
      </svg>
      <span
        class="t-button__text"
      >
         图标按钮
      </span>
    </button>
  </div>
  <div
    class="flex align-center margin-right"
  >
    <button
      class="t-button t-button--base t-button--primary t-size-l t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-app"
      >
        <use
          xlink:href="#t-icon-app"
        />
      </svg>
    </button>
    <button
      class="t-button t-button--base t-button--primary t-size-l t-button--shape-circle"
      type="button"
    >
      <svg
        class="t-icon t-icon-app"
      >
        <use
          xlink:href="#t-icon-app"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`index.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-mobile-demo"
  >
    <div
      class="tdesign-mobile-demo-header"
    >
      <h1
        class="tdesign-mobile-demo-header__title"
      >
        Button 按钮
      </h1>
      <p
        class="tdesign-mobile-demo-header__summary"
      >
        按钮用于开启一个闭环的操作任务，如“删除”对象、“购买”商品等。
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 基础按钮
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础类型分为主按钮、次按钮、文字按钮。
      </p>
      <div
        class="button-demo"
      >
        <button
          class="t-button t-button--base t-button--primary t-size-l t-is-block t-button--shape-rectangle"
          type="button"
        >
          <span
            class="t-button__text"
          >
             强按钮
          </span>
        </button>
        <button
          class="t-button t-button--outline t-button--primary t-size-l t-is-block t-button--shape-rectangle"
          type="button"
        >
          <span
            class="t-button__text"
          >
             弱按钮
          </span>
        </button>
        <button
          class="t-button t-button--outline t-button--default t-size-l t-is-block t-button--shape-rectangle"
          type="button"
        >
          <span
            class="t-button__text"
          >
             次按钮
          </span>
        </button>
        <button
          class="t-button t-button--base t-button--primary t-size-default t-is-block t-button--shape-rectangle"
          type="button"
        >
          <svg
            class="t-icon t-icon-app"
          >
            <use
              xlink:href="#t-icon-app"
            />
          </svg>
          <span
            class="t-button__text"
          >
             带图标按钮
          </span>
        </button>
        <button
          class="t-button t-button--base t-button--danger t-size-l t-is-block t-button--shape-rectangle"
          type="button"
        >
          <span
            class="t-button__text"
          >
             强警告按钮
          </span>
        </button>
        <button
          class="t-button t-button--outline t-button--danger t-size-l t-is-block t-button--shape-rectangle"
          type="button"
        >
          <span
            class="t-button__text"
          >
             弱警告按钮
          </span>
        </button>
      </div>
      <div
        style="background: rgb(166, 166, 166); padding: 8px 16px; margin-bottom: 16px;"
      >
        <button
          class="t-button t-button--outline t-button--default t-button--ghost t-size-l t-is-block t-button--shape-rectangle"
          type="button"
        >
          <span
            class="t-button__text"
          >
             幽灵按钮
          </span>
        </button>
      </div>
      <div
        class="margin-button"
      >
        <button
          class="t-button t-button--text t-button--primary t-size-l t-is-block t-button--shape-rectangle"
          type="button"
        >
          <span
            class="t-button__text"
          >
             文字按钮
          </span>
        </button>
      </div>
      <div
        class="no-border-radius margin-button"
      >
        <button
          class="t-button t-button--base t-button--primary t-size-l t-is-block t-button--shape-rectangle"
          type="button"
        >
          <span
            class="t-button__text"
          >
             通栏按钮
          </span>
        </button>
      </div>
      <div
        class="no-border-radius no-border flex margin-button"
      >
        <button
          class="t-button t-button--outline t-button--default t-size-l t-is-block t-button--shape-rectangle"
          type="button"
        >
          <span
            class="t-button__text"
          >
             次按钮
          </span>
        </button>
        <button
          class="t-button t-button--base t-button--primary t-size-l t-is-block t-button--shape-rectangle"
          type="button"
        >
          <span
            class="t-button__text"
          >
             主按钮
          </span>
        </button>
      </div>
      <div
        class="button-demo align-center margin-right"
      >
        <div
          class="flex align-center margin-right"
        >
          <button
            class="t-button t-button--base t-button--primary t-size-l t-button--shape-rectangle"
            type="button"
          >
            <svg
              class="t-icon t-icon-app"
            >
              <use
                xlink:href="#t-icon-app"
              />
            </svg>
            <span
              class="t-button__text"
            >
               图标按钮
            </span>
          </button>
          <button
            class="t-button t-button--base t-button--primary t-size-l t-button--shape-round"
            type="button"
          >
            <svg
              class="t-icon t-icon-app"
            >
              <use
                xlink:href="#t-icon-app"
              />
            </svg>
            <span
              class="t-button__text"
            >
               图标按钮
            </span>
          </button>
        </div>
        <div
          class="flex align-center margin-right"
        >
          <button
            class="t-button t-button--base t-button--primary t-size-l t-button--shape-square"
            type="button"
          >
            <svg
              class="t-icon t-icon-app"
            >
              <use
                xlink:href="#t-icon-app"
              />
            </svg>
          </button>
          <button
            class="t-button t-button--base t-button--primary t-size-l t-button--shape-circle"
            type="button"
          >
            <svg
              class="t-icon t-icon-app"
            >
              <use
                xlink:href="#t-icon-app"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="flex align-center margin-right button-demo-loading"
      >
        <div
          class="button-demo flex"
        >
          <button
            class="t-button t-button--base t-button--primary t-size-l t-is-loading t-button--shape-square"
            disabled=""
            type="button"
          >
            <svg
              class="t-icon t-icon-loading"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 1.5a6.5 6.5 0 000 13v-1.63A4.87 4.87 0 1112.88 8h1.62A6.5 6.5 0 008 1.5z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </button>
          <button
            class="t-button t-button--base t-button--primary t-size-l t-is-loading t-button--shape-rectangle"
            disabled=""
            type="button"
          >
            <svg
              class="t-icon t-icon-loading"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 1.5a6.5 6.5 0 000 13v-1.63A4.87 4.87 0 1112.88 8h1.62A6.5 6.5 0 008 1.5z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            <span
              class="t-button__text"
            >
               加载中...
            </span>
          </button>
          <button
            class="t-button t-button--base t-button--primary t-size-l t-button--shape-rectangle"
            type="button"
          >
            <span
              class="t-button__text"
            >
               Click me!
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="tdesign-mobile-demo-block"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        按钮禁用态
      </p>
      <div
        class="button-demo"
      >
        <button
          class="t-button t-button--base t-button--primary t-size-l t-is-disabled t-is-block t-button--shape-rectangle"
          disabled=""
          type="button"
        >
          <span
            class="t-button__text"
          >
             强按钮
          </span>
        </button>
        <button
          class="t-button t-button--outline t-button--primary t-size-l t-is-disabled t-is-block t-button--shape-rectangle"
          disabled=""
          type="button"
        >
          <span
            class="t-button__text"
          >
             弱按钮
          </span>
        </button>
        <button
          class="t-button t-button--outline t-button--default t-size-l t-is-disabled t-is-block t-button--shape-rectangle"
          disabled=""
          type="button"
        >
          <span
            class="t-button__text"
          >
             次按钮
          </span>
        </button>
        <button
          class="t-button t-button--base t-button--primary t-size-default t-is-disabled t-is-block t-button--shape-rectangle"
          disabled=""
          type="button"
        >
          <svg
            class="t-icon t-icon-app"
          >
            <use
              xlink:href="#t-icon-app"
            />
          </svg>
          <span
            class="t-button__text"
          >
             带图标按钮
          </span>
        </button>
        <button
          class="t-button t-button--base t-button--danger t-size-l t-is-disabled t-is-block t-button--shape-rectangle"
          disabled=""
          type="button"
        >
          <span
            class="t-button__text"
          >
             强警告按钮
          </span>
        </button>
        <button
          class="t-button t-button--outline t-button--danger t-size-l t-is-disabled t-is-block t-button--shape-rectangle"
          disabled=""
          type="button"
        >
          <span
            class="t-button__text"
          >
             弱警告按钮
          </span>
        </button>
      </div>
      <div
        style="background: rgb(166, 166, 166); padding: 8px 16px; margin-bottom: 16px;"
      >
        <button
          class="t-button t-button--outline t-button--default t-button--ghost t-size-l t-is-disabled t-is-block t-button--shape-rectangle"
          disabled=""
          type="button"
        >
          <span
            class="t-button__text"
          >
             幽灵按钮
          </span>
        </button>
      </div>
      <div
        class="margin-button"
      >
        <button
          class="t-button t-button--text t-button--primary t-size-l t-is-disabled t-is-block t-button--shape-rectangle"
          disabled=""
          type="button"
        >
          <span
            class="t-button__text"
          >
             文字按钮
          </span>
        </button>
      </div>
      <div
        class="no-border-radius margin-button"
      >
        <button
          class="t-button t-button--base t-button--primary t-size-l t-is-disabled t-is-block t-button--shape-rectangle"
          disabled=""
          type="button"
        >
          <span
            class="t-button__text"
          >
             通栏按钮
          </span>
        </button>
      </div>
      <div
        class="no-border-radius no-border flex margin-button"
      >
        <button
          class="t-button t-button--outline t-button--default t-size-l t-is-disabled t-is-block t-button--shape-rectangle"
          disabled=""
          type="button"
        >
          <span
            class="t-button__text"
          >
             次按钮
          </span>
        </button>
        <button
          class="t-button t-button--base t-button--primary t-size-l t-is-disabled t-is-block t-button--shape-rectangle"
          disabled=""
          type="button"
        >
          <span
            class="t-button__text"
          >
             主按钮
          </span>
        </button>
      </div>
      <div
        class="button-demo align-center margin-right"
      >
        <div
          class="flex align-center margin-right"
        >
          <button
            class="t-button t-button--base t-button--primary t-size-l t-is-disabled t-button--shape-rectangle"
            disabled=""
            type="button"
          >
            <svg
              class="t-icon t-icon-app"
            >
              <use
                xlink:href="#t-icon-app"
              />
            </svg>
            <span
              class="t-button__text"
            >
               图标按钮
            </span>
          </button>
          <button
            class="t-button t-button--base t-button--primary t-size-l t-is-disabled t-button--shape-round"
            disabled=""
            type="button"
          >
            <svg
              class="t-icon t-icon-app"
            >
              <use
                xlink:href="#t-icon-app"
              />
            </svg>
            <span
              class="t-button__text"
            >
               图标按钮
            </span>
          </button>
        </div>
        <div
          class="flex align-center margin-right"
        >
          <button
            class="t-button t-button--base t-button--primary t-size-l t-is-disabled t-button--shape-square"
            disabled=""
            type="button"
          >
            <svg
              class="t-icon t-icon-app"
            >
              <use
                xlink:href="#t-icon-app"
              />
            </svg>
          </button>
          <button
            class="t-button t-button--base t-button--primary t-size-l t-is-disabled t-button--shape-circle"
            disabled=""
            type="button"
          >
            <svg
              class="t-icon t-icon-app"
            >
              <use
                xlink:href="#t-icon-app"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="flex align-center margin-right button-demo-loading"
      >
        <div
          class="button-demo flex"
        >
          <button
            class="t-button t-button--base t-button--primary t-size-l t-is-loading t-is-disabled t-button--shape-square"
            disabled=""
            type="button"
          >
            <svg
              class="t-icon t-icon-loading"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 1.5a6.5 6.5 0 000 13v-1.63A4.87 4.87 0 1112.88 8h1.62A6.5 6.5 0 008 1.5z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </button>
          <button
            class="t-button t-button--base t-button--primary t-size-l t-is-loading t-is-disabled t-button--shape-rectangle"
            disabled=""
            type="button"
          >
            <svg
              class="t-icon t-icon-loading"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 1.5a6.5 6.5 0 000 13v-1.63A4.87 4.87 0 1112.88 8h1.62A6.5 6.5 0 008 1.5z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            <span
              class="t-button__text"
            >
               加载中...
            </span>
          </button>
          <button
            class="t-button t-button--base t-button--primary t-size-l t-is-disabled t-button--shape-rectangle"
            disabled=""
            type="button"
          >
            <span
              class="t-button__text"
            >
               Click me!
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="tdesign-mobile-demo-block"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 规格
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        按钮尺寸
      </p>
      <div
        class="button-demo"
      >
        <div
          class="flex align-center margin-right"
        >
          <button
            class="t-button t-button--base t-button--primary t-size-l t-button--shape-rectangle"
            type="button"
          >
            <span
              class="t-button__text"
            >
               按钮 44
            </span>
          </button>
          <button
            class="t-button t-button--base t-button--primary t-size-default t-button--shape-rectangle"
            type="button"
          >
            <span
              class="t-button__text"
            >
               按钮 40
            </span>
          </button>
          <button
            class="t-button t-button--base t-button--primary t-size-s t-button--shape-rectangle"
            type="button"
          >
            <span
              class="t-button__text"
            >
               按钮 36
            </span>
          </button>
        </div>
        <div
          class="flex align-center margin-right"
        >
          <button
            class="t-button t-button--base t-button--primary t-size-l t-button--shape-round"
            type="button"
          >
            <svg
              class="t-icon t-icon-app"
            >
              <use
                xlink:href="#t-icon-app"
              />
            </svg>
            <span
              class="t-button__text"
            >
               按钮
            </span>
          </button>
          <button
            class="t-button t-button--base t-button--primary t-size-default t-button--shape-round"
            type="button"
          >
            <svg
              class="t-icon t-icon-app"
            >
              <use
                xlink:href="#t-icon-app"
              />
            </svg>
            <span
              class="t-button__text"
            >
               按钮
            </span>
          </button>
          <button
            class="t-button t-button--base t-button--primary t-size-s t-button--shape-round"
            type="button"
          >
            <svg
              class="t-icon t-icon-app"
            >
              <use
                xlink:href="#t-icon-app"
              />
            </svg>
            <span
              class="t-button__text"
            >
               按钮
            </span>
          </button>
        </div>
        <div
          class="flex align-center margin-right"
        >
          <button
            class="t-button t-button--base t-button--primary t-size-l t-button--shape-square"
            type="button"
          >
            <svg
              class="t-icon t-icon-app"
            >
              <use
                xlink:href="#t-icon-app"
              />
            </svg>
          </button>
          <button
            class="t-button t-button--base t-button--primary t-size-default t-button--shape-square"
            type="button"
          >
            <svg
              class="t-icon t-icon-app"
            >
              <use
                xlink:href="#t-icon-app"
              />
            </svg>
          </button>
          <button
            class="t-button t-button--base t-button--primary t-size-s t-button--shape-square"
            type="button"
          >
            <svg
              class="t-icon t-icon-app"
            >
              <use
                xlink:href="#t-icon-app"
              />
            </svg>
          </button>
        </div>
        <div
          class="flex align-center margin-right"
        >
          <button
            class="t-button t-button--base t-button--primary t-size-l t-button--shape-circle"
            type="button"
          >
            <svg
              class="t-icon t-icon-app"
            >
              <use
                xlink:href="#t-icon-app"
              />
            </svg>
          </button>
          <button
            class="t-button t-button--base t-button--primary t-size-default t-button--shape-circle"
            type="button"
          >
            <svg
              class="t-icon t-icon-app"
            >
              <use
                xlink:href="#t-icon-app"
              />
            </svg>
          </button>
          <button
            class="t-button t-button--base t-button--primary t-size-s t-button--shape-circle"
            type="button"
          >
            <svg
              class="t-icon t-icon-app"
            >
              <use
                xlink:href="#t-icon-app"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`loading.jsx 1`] = `
<DocumentFragment>
  <div
    class="button-demo flex"
  >
    <button
      class="t-button t-button--base t-button--primary t-size-l t-is-loading t-button--shape-square"
      disabled=""
      type="button"
    >
      <svg
        class="t-icon t-icon-loading"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 1.5a6.5 6.5 0 000 13v-1.63A4.87 4.87 0 1112.88 8h1.62A6.5 6.5 0 008 1.5z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
    <button
      class="t-button t-button--base t-button--primary t-size-l t-is-loading t-button--shape-rectangle"
      disabled=""
      type="button"
    >
      <svg
        class="t-icon t-icon-loading"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 1.5a6.5 6.5 0 000 13v-1.63A4.87 4.87 0 1112.88 8h1.62A6.5 6.5 0 008 1.5z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <span
        class="t-button__text"
      >
         加载中...
      </span>
    </button>
    <button
      class="t-button t-button--base t-button--primary t-size-l t-button--shape-rectangle"
      type="button"
    >
      <span
        class="t-button__text"
      >
         Click me!
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`other.jsx 1`] = `
<DocumentFragment>
  <div
    style="background: rgb(166, 166, 166); padding: 8px 16px; margin-bottom: 16px;"
  >
    <button
      class="t-button t-button--outline t-button--default t-button--ghost t-size-l t-is-block t-button--shape-rectangle"
      type="button"
    >
      <span
        class="t-button__text"
      >
         幽灵按钮
      </span>
    </button>
  </div>
  <div
    class="margin-button"
  >
    <button
      class="t-button t-button--text t-button--primary t-size-l t-is-block t-button--shape-rectangle"
      type="button"
    >
      <span
        class="t-button__text"
      >
         文字按钮
      </span>
    </button>
  </div>
  <div
    class="no-border-radius margin-button"
  >
    <button
      class="t-button t-button--base t-button--primary t-size-l t-is-block t-button--shape-rectangle"
      type="button"
    >
      <span
        class="t-button__text"
      >
         通栏按钮
      </span>
    </button>
  </div>
  <div
    class="no-border-radius no-border flex margin-button"
  >
    <button
      class="t-button t-button--outline t-button--default t-size-l t-is-block t-button--shape-rectangle"
      type="button"
    >
      <span
        class="t-button__text"
      >
         次按钮
      </span>
    </button>
    <button
      class="t-button t-button--base t-button--primary t-size-l t-is-block t-button--shape-rectangle"
      type="button"
    >
      <span
        class="t-button__text"
      >
         主按钮
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`shape.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--base t-button--default t-size-default t-button--shape-rectangle"
    type="button"
  >
    <span
      class="t-button__text"
    >
       长方形按钮
    </span>
  </button>
  <button
    class="t-button t-button--base t-button--default t-size-default t-button--shape-square"
    type="button"
  >
    <span
      class="t-button__text"
    >
       正方形按钮
    </span>
  </button>
  <button
    class="t-button t-button--base t-button--default t-size-default t-button--shape-round"
    type="button"
  >
    <span
      class="t-button__text"
    >
       圆角长方形按钮
    </span>
  </button>
  <button
    class="t-button t-button--base t-button--default t-size-default t-button--shape-circle"
    type="button"
  >
    <span
      class="t-button__text"
    >
       圆形按钮
    </span>
  </button>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="flex align-center margin-right"
  >
    <button
      class="t-button t-button--base t-button--primary t-size-l t-button--shape-rectangle"
      type="button"
    >
      <span
        class="t-button__text"
      >
         按钮 44
      </span>
    </button>
    <button
      class="t-button t-button--base t-button--primary t-size-default t-button--shape-rectangle"
      type="button"
    >
      <span
        class="t-button__text"
      >
         按钮 40
      </span>
    </button>
    <button
      class="t-button t-button--base t-button--primary t-size-s t-button--shape-rectangle"
      type="button"
    >
      <span
        class="t-button__text"
      >
         按钮 36
      </span>
    </button>
  </div>
  <div
    class="flex align-center margin-right"
  >
    <button
      class="t-button t-button--base t-button--primary t-size-l t-button--shape-round"
      type="button"
    >
      <svg
        class="t-icon t-icon-app"
      >
        <use
          xlink:href="#t-icon-app"
        />
      </svg>
      <span
        class="t-button__text"
      >
         按钮
      </span>
    </button>
    <button
      class="t-button t-button--base t-button--primary t-size-default t-button--shape-round"
      type="button"
    >
      <svg
        class="t-icon t-icon-app"
      >
        <use
          xlink:href="#t-icon-app"
        />
      </svg>
      <span
        class="t-button__text"
      >
         按钮
      </span>
    </button>
    <button
      class="t-button t-button--base t-button--primary t-size-s t-button--shape-round"
      type="button"
    >
      <svg
        class="t-icon t-icon-app"
      >
        <use
          xlink:href="#t-icon-app"
        />
      </svg>
      <span
        class="t-button__text"
      >
         按钮
      </span>
    </button>
  </div>
  <div
    class="flex align-center margin-right"
  >
    <button
      class="t-button t-button--base t-button--primary t-size-l t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-app"
      >
        <use
          xlink:href="#t-icon-app"
        />
      </svg>
    </button>
    <button
      class="t-button t-button--base t-button--primary t-size-default t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-app"
      >
        <use
          xlink:href="#t-icon-app"
        />
      </svg>
    </button>
    <button
      class="t-button t-button--base t-button--primary t-size-s t-button--shape-square"
      type="button"
    >
      <svg
        class="t-icon t-icon-app"
      >
        <use
          xlink:href="#t-icon-app"
        />
      </svg>
    </button>
  </div>
  <div
    class="flex align-center margin-right"
  >
    <button
      class="t-button t-button--base t-button--primary t-size-l t-button--shape-circle"
      type="button"
    >
      <svg
        class="t-icon t-icon-app"
      >
        <use
          xlink:href="#t-icon-app"
        />
      </svg>
    </button>
    <button
      class="t-button t-button--base t-button--primary t-size-default t-button--shape-circle"
      type="button"
    >
      <svg
        class="t-icon t-icon-app"
      >
        <use
          xlink:href="#t-icon-app"
        />
      </svg>
    </button>
    <button
      class="t-button t-button--base t-button--primary t-size-s t-button--shape-circle"
      type="button"
    >
      <svg
        class="t-icon t-icon-app"
      >
        <use
          xlink:href="#t-icon-app"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`test.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--base t-button--primary t-size-default t-button--shape-rectangle"
      type="button"
    >
      <span
        class="t-button__text"
      >
         主要按钮
      </span>
    </button>
    <button
      class="t-button t-button--outline t-button--default t-size-default t-button--shape-rectangle"
      type="button"
    >
      <span
        class="t-button__text"
      >
         主要按钮
      </span>
    </button>
  </div>
  <div>
    <button
      class="t-button t-button--base t-button--primary t-size-default t-button--shape-rectangle"
      type="button"
    >
      <span
        class="t-button__text"
      >
         主要按钮
      </span>
    </button>
    <button
      class="t-button t-button--base t-button--primary t-size-default t-button--shape-rectangle"
      type="button"
    >
      <span
        class="t-button__text"
      >
         主要按钮
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`type.jsx 1`] = `
<DocumentFragment>
  <div
    class="button-demo"
  >
    <button
      class="t-button t-button--outline t-button--danger t-size-default t-button--shape-rectangle"
      type="reset"
    >
      <span
        class="t-button__text"
      >
         Reset
      </span>
    </button>
    <button
      class="t-button t-button--base t-button--danger t-size-default t-button--shape-rectangle"
      type="submit"
    >
      <span
        class="t-button__text"
      >
         Submit
      </span>
    </button>
    <button
      class="t-button t-button--base t-button--primary t-size-default t-button--shape-rectangle"
      type="button"
    >
      <span
        class="t-button__text"
      >
         Button
      </span>
    </button>
  </div>
</DocumentFragment>
`;
